[js] add vuejs as depedency

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="{{ static_url('vendor/semantic/dist/semantic.min.css') }}">
   <script src="{{ static_url('vendor/semantic/dist/semantic.min.js') }}"></script>
 
+  <!-- vue.js -->
+  <script src="{{ static_url('vendor/node_modules/vue/dist/vue.min.js')}}"></script>
+
   {% block head %}
   {% endblock head %}
 </head>
