[tmpl] home page

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,4 +1,4 @@
-<div class="ui olive huge inverted attached menu">
+<div id="main-menu" class="ui olive huge inverted attached menu">
   <div class="ui container">
     <div class="header item">
       IoTtalk
