--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,11 @@
 {% extends "base.html" %}
 
 {% block title %}Home{% endblock title %}
+
+{% block main %}
+<div class="ui container">
+  <button class="circular massive ui icon button">
+    <i class="icon plus"></i>
+  </button>
+</div>
+{% endblock main %}
