[js] add basic vuejs router

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -3,8 +3,15 @@
     <div class="header item">
       IoTtalk
     </div>
-    <a class="item active">
-      <i class="home icon"></i> Home
+    <a class="item"
+       v-link="{path: '/', activeClass: 'active', exact: true}">
+      <i class="home icon"></i>
+      Home
+    </a>
+    <a class="item"
+       v-link="{path: '/setting', activeClass: 'active'}">
+      <i class="setting icon"></i>
+      Setting
     </a>
   </div>
 </div><!-- .menu -->
