--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,10 +8,12 @@
 
   <!-- semantic-ui -->
   <link rel="stylesheet" href="{{ static_url('vendor/semantic/dist/semantic.min.css') }}">
+  <script src="{{ static_url('vendor/node_modules/jquery/dist/jquery.min.js') }}"></script>
   <script src="{{ static_url('vendor/semantic/dist/semantic.min.js') }}"></script>
 
   <!-- vue.js -->
-  <script src="{{ static_url('vendor/node_modules/vue/dist/vue.min.js')}}"></script>
+  <script src="{{ static_url('vendor/node_modules/vue/dist/vue.min.js') }}"></script>
+  <script src="{{ static_url('vendor/node_modules/vue-router/dist/vue-router.min.js') }}"></script>
 
   {% block head %}
   {% endblock head %}
@@ -41,5 +43,8 @@
     </footer>
 
   {% endblock body %}
+
+  <!-- wait until DOM ready -->
+  <script src="{{ static_url('js/app.js') }}"></script>
 </body>
 </html>
