[static] add mulit path static file handler

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="{{ static_url('css/base.css') }}">
 
   <!-- semantic-ui -->
-  <link rel="stylesheet" href="{{ static_url('vendor/semantic/dist/semantic.min.css') }}">
-  <script src="{{ static_url('vendor/node_modules/jquery/dist/jquery.min.js') }}"></script>
-  <script src="{{ static_url('vendor/semantic/dist/semantic.min.js') }}"></script>
+  <link rel="stylesheet" href="{{ static_url('semantic/semantic.min.css') }}">
+  <script src="{{ static_url('jquery/dist/jquery.min.js') }}"></script>
+  <script src="{{ static_url('semantic/semantic.min.js') }}"></script>
 
   <!-- vue.js -->
-  <script src="{{ static_url('vendor/node_modules/vue/dist/vue.min.js') }}"></script>
-  <script src="{{ static_url('vendor/node_modules/vue-router/dist/vue-router.min.js') }}"></script>
+  <script src="{{ static_url('vue/dist/vue.min.js') }}"></script>
+  <script src="{{ static_url('vue-router/dist/vue-router.min.js') }}"></script>
 
   {% block head %}
   {% endblock head %}
