--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,47 +4,15 @@
   <meta charset="UTF-8">
   <title>IoTtalk GUI | {% block title %}{% endblock title %}</title>
 
-  <link rel="stylesheet" href="{{ static_url('css/base.css') }}">
-
   <!-- semantic-ui -->
   <link rel="stylesheet" href="{{ static_url('semantic/semantic.min.css') }}">
   <script src="{{ static_url('jquery/dist/jquery.min.js') }}"></script>
   <script src="{{ static_url('semantic/semantic.min.js') }}"></script>
 
-  <!-- vue.js -->
-  <script src="{{ static_url('vue/dist/vue.min.js') }}"></script>
-  <script src="{{ static_url('vue-router/dist/vue-router.min.js') }}"></script>
-
   {% block head %}
   {% endblock head %}
 </head>
 <body>
-  {% block body %}
-
-    <header>
-    {% block header %}
-    {% endblock header %}
-    </header>
-
-    <nav>
-    {% block nav %}
-    {% include "nav.html" %}
-    {% endblock nav %}
-    </nav>
-
-    <main>
-    {% block main %}
-    {% endblock main %}
-    </main>
-
-    <footer>
-    {% block fotter %}
-    {% endblock fotter %}
-    </footer>
-
-  {% endblock body %}
-
-  <!-- wait until DOM ready -->
-  <script src="{{ static_url('js/app.js') }}"></script>
+  <script src="{{ static_url('js/build.js') }}"></script>
 </body>
 </html>
