[vue] flatten static dir structure

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,6 @@
   {% endblock head %}
 </head>
 <body>
-  <script src="{{ static_url('js/build.js') }}"></script>
+  <script src="{{ static_url('build.js') }}"></script>
 </body>
 </html>
