[server] fix tornado template rendering

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>IoTtalk GUI | {% block title %}{% endblock title %}</title>
+  <title>IoTtalk GUI</title>
 
   <!-- semantic-ui -->
   <link rel="stylesheet" href="{{ static_url('semantic/semantic.min.css') }}">
